# lexi-gpt

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.override.yml  docker-compose.yml  privacy-policy.md
.github/ISSUE_TEMPLATE/: custom.md
.github/workflows/: deploy-backend.yml  deploy-frontend.yml  test-backend.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.backend  Makefile  README.md  docker-compose.override.yml  docker-compose.yml  openapi.yaml  package.json  pyproject.toml  pytest.ini  requirements.txt
backend/.build/ecr/: Dockerfile  requirements.txt
backend/app/: config.py  lambda_handler.py  main.py  session_middleware.py
backend/app/api/: __init__.py  auth.py  books.py  chat.py  health.py  routes.py  search_books.py
backend/app/clients/: README.md  book_cache_client.py  cache_client.py  llm_client.py  llm_client.sh  llm_repl.py  open_library.py  open_library_api_client.py  qdrant_vector_db_client.py
backend/app/data/book_metadata/: preprocessed_vector_data.json  subjects.json
backend/app/mocks/: llm_mock.py
backend/app/models/: book.py  ollama_client.py
backend/app/pipelines/: extract.py  load.py  transform.py
backend/app/schemas/: api.py  chat.py  models.py  open_library_api_schema.py  search_books.py
backend/app/services/: auth.py  book_processor.py  calculate_similarity.py  deepseek_chat.py  generate_embedding.py  llm.py  llm_worker.py  openlibrary.py  openlibrary_service.py  preprocess_books.py  preprocessing.py  profanity.py  rag_pipeline.py  semantic_search.py  session_manager.py
backend/app/tests/: conftest.py  pytest.ini  test_env.py  test_openlibrary.py  test_openlibrary_service.py
backend/app/tests/clients/: test_book_cache_client.py  test_llm_client.py  test_open_library.py  test_open_library_api_client.py  test_search_subjects.py
backend/app/tests/integration/: test_integration_search_books.py  test_llm.py  test_open_library_search_filters.py  test_openlibrary_search_api.py  test_search_books.py
backend/app/tests/integration/api/: test_chat_route.py  test_main_route.py  test_search_books_route.py
backend/app/tests/services/: test_llm_worker.py  test_rag_pipeline.py  test_semantic_search.py
backend/app/tests/unit/: test_llm_client.py
backend/redis/: redis.conf
frontend/: .dockerignore  .env.example  .gitignore  Dockerfile.frontend  FRONTEND.md  Makefile  README.md  babel.config.js  config-overrides.js  dump.rdb  eslint.config.mjs  jest.config.js  package.json  playwright.config.ts  server.js  server.mjs  tailwind.config.js  trust-policy.json  tsconfig.json
frontend/public/: index.html  manifest.json
frontend/src/: App.js  App.tsx  index.css  index.js  setupFetchLogger.ts  setupProxy.js
frontend/src/components/: BookList.tsx  SearchBar.jsx  SearchBar.tsx  StreamComponent.tsx  button.tsx  nav-bar.tsx  status-bar.tsx
frontend/src/config/: auth-config.ts  chat-options.ts
frontend/src/models/: api.d.ts  (+1 more)
frontend/types/: api.d.ts  open-library-api.d.ts
(+62 files in other folders)
