[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Backend service"
authors = ["Daniel Dayto <danielcdayto@gmail.com>"]
readme = "README.md"
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
fastapi = ">=0.115,<0.120"
uvicorn = ">=0.34,<0.40"
httpx = ">=0.28,<0.30"
pydantic = ">=2.10,<3"
mangum = "^0.19.0"
python-dotenv = "^1.0.1"
pytest = ">=8.3,<9"
pytest-asyncio = ">=0.25,<1"
python-multipart = "^0.0.20"
redis = "^5.2.1"
transformers = "^4.48.2"
qdrant-client = "^1.13.2"
sentence-transformers = "^3.4.1"
accelerate = "^1.3.0"
spacy = "^3.8.4"
instructor = "^1.7.2"
openai = "^1.61.1"
vllm = "^0.7.1"
huggingface-hub = "^0.28.1"
langchain-ollama = "^0.2.3"
ollama = "^0.4.7"

[tool.poetry.group.dev.dependencies]

pipreqs = "^0.4.13"
black = ">=24,<25"
mypy = ">=1.10,<2"
ruff = ">=0.1,<1"
watchdog = "4.0.2"
deptry = "^0.23.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
