[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Backend service"
authors = ["Daniel Dayto <danielcdayto@gmail.com>"]
readme = "README.md"
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
fastapi = ">=0.115,<0.120"
httpx = ">=0.28,<0.30"
pydantic = ">=2.10,<3"
python-dotenv = "^1.0.1"
pytest = ">=8.3,<9"
pytest-asyncio = ">=0.25,<1"
redis = "^5.2.1"
qdrant-client = "^1.13.2"
ollama = "^0.4.7"
asgi-lifespan = "^2.1.0"

blis = "==0.7.9"
uvicorn = "^0.34.0"
asyncio = "^3.4.3"

[tool.poetry.group.dev.dependencies]

pipreqs = "^0.4.13"
black = ">=24,<25"
mypy = ">=1.10,<2"
ruff = ">=0.1,<1"
watchdog = "4.0.2"
deptry = "^0.23.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
